src/infra/kind/signalr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: signalr
  namespace: blazorpong
  labels:
    app: signalr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: signalr
  template:
    metadata:
      labels:
        app: signalr
    spec:
      containers:
        - name: signalr
          image: ghcr.io/macel94/cloudnativeblazorpong/blazorpong-signalr:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: signalr
  namespace: blazorpong
  labels:
    app: signalr
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: signalr
